Added 2 more activities,those being ManualAdjustActivity and AutomatedAdjustActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,24 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".AutomatedAdjustActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".ManualAdjustActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <service
-            android:name=".BlueLightFilterService"
+            android:name=".BlueLightService"
             android:enabled="true"
             android:exported="true"></service>
 
