Added 4 radio buttons that select the screen transparency when in ManualMode

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".fragments.AutomatedAdjustActivity">
+        <activity android:name=".fragments.AutomatedAdjustFragment">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,7 +31,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".fragments.ManualAdjustActivity">
+        <activity android:name=".fragments.ManualAdjustFragment">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
